v002/test-summary/ctest/Run_016.md
<a id="top"></a>
[← back](README.md) · [↓ bottom](#bottom)

# ctest — Run_016

_jac313-002 · gcc 15.2.1 · Debug · headers · 2026-06-30T04:54:01Z_

| test | persist | mode | tool | status | ms |
|---|---|---|---|---|--:|
| jac313_contracts_disabled_test | - | - | - | pass | 50 |
| jac313_contracts_enforce_test | - | - | - | pass | 250 |
| jac313_contracts_test | - | - | - | pass | 50 |
| jac313_identity_dedup_test | - | - | - | pass | 50 |
| jac313_jtext_v002_parser_validator_test | - | - | - | pass | 50 |
| jac313_jtext_v002_test | - | - | - | pass | 50 |
| jac313_qlite_v002_test | - | - | - | pass | 50 |
| jac313_run_identity_test | - | - | - | pass | 50 |
| jac313_store_001_TS | - | - | - | pass | 50 |
| jac313_store_001_XS | - | - | - | pass | 50 |
| jac313_store_002_TS | - | - | - | pass | 50 |
| jac313_store_002_XS | - | - | - | pass | 50 |
| jac313_store_003_TS | - | - | - | pass | 50 |
| jac313_store_003_XS | - | - | - | pass | 50 |
| jac313_store_004_TS | - | - | - | pass | 50 |
| jac313_store_004_XS | - | - | - | pass | 50 |
| jac313_store_005_TS | - | - | - | pass | 50 |
| jac313_store_005_XS | - | - | - | pass | 50 |
| jac313_store_006_TS | - | - | - | pass | 50 |
| jac313_store_006_XS | - | - | - | pass | 50 |
| jac313_store_007_TS | - | - | - | pass | 50 |
| jac313_store_007_XS | - | - | - | pass | 50 |
| jac313_store_008_TS | - | - | - | pass | 651 |
| jac313_store_008_XS | - | - | - | pass | 150 |
| jac313_store_bench_smoke | - | - | - | pass | 50 |
| jac313_store_binary_persist_smoke | - | - | - | pass | 50 |
| jac313_store_binary_reader_test | - | - | - | pass | 100 |
| jac313_store_binary_to_jtext_smoke | - | - | - | pass | 50 |
| jac313_store_flag_routing_smoke | - | - | - | pass | 300 |
| jac313_store_flags | - | - | - | pass | 50 |
| jac313_store_jtext_persist_smoke | - | - | - | pass | 50 |
| jac313_store_metric_view | - | - | - | pass | 50 |
| jac313_store_metric_view_test | - | - | - | pass | 50 |
| jac313_store_saturating_capacity_test | - | - | - | pass | 50 |
| jac313_store_sql_persist_smoke | - | - | - | pass | 250 |
| jac313_store_v002_test | - | - | - | pass | 50 |

---
[← back](README.md) · [↑ top](#top)
<a id="bottom"></a>
